--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -20,7 +20,12 @@
 @media only screen and (max-width : 992px)
 	.top-line
 			text-align: center
-
+	.bus-form 
+		padding-bottom: 0
+		margin-bottom: 0
+		.forms
+			padding-bottom: 0
+			margin-bottom: 0
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
@@ -41,7 +46,7 @@
 			width: 300px
 		p
 			margin: 0
-	.sect-2__content .h2, .sect-4 .h2
+	.sect-2__content .h2, .sect-4 .h2, .sect-5 .h2
 		padding: 0
 		font-size: 36px
 		&::before
@@ -51,10 +56,18 @@
 		height: auto
 		.tex
 			 p
-			 	line-height: 1.4
+				line-height: 1.4
 	.sect-4
 		padding-bottom: 40px
-		 	
+	.bus-items
+		flex-direction: column
+		justify-content: flex-start
+	.sect-5
+		padding-top: 0	
+	.bus-form .forms p 
+    font-size: 18px
+    line-height: 30px
+			
 
 
 
@@ -87,6 +100,13 @@
 			width: 100%
 	.owl-dots .owl-dot 
 		margin: 0px 9px
+	.sect-5
+		.forms
+			padding-left: 5px
+			padding-right: 5px
+	.bus-form .forms .button
+		padding-left: 0
+		padding-right: 0
 
 
 /* Custom, iPhone Retina */
