Section 7 is ready

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -26,6 +26,23 @@
 		.forms
 			padding-bottom: 0
 			margin-bottom: 0
+	.flip-clock-wrapper ul 
+	    width: 29px
+	    height: 50px
+	    margin: 2px
+	.flip-clock-wrapper ul li a div div.inn
+ 	 font-size: 40px
+	.flip-clock-dot
+	  width: 5px
+	  height: 5px
+	  padding-top: 5px!important
+	.flip-clock-wrapper
+		margin: 0
+	.flip-clock-dot.top
+		top: 25px
+	.flip-clock-dot.bottom
+		bottom: 39px
+
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
@@ -46,7 +63,7 @@
 			width: 300px
 		p
 			margin: 0
-	.sect-2__content .h2, .sect-4 .h2, .sect-5 .h2
+	.sect-2__content .h2, .sect-4 .h2, .sect-5 .h2, .sect-6 .h2
 		padding: 0
 		font-size: 36px
 		&::before
@@ -67,7 +84,35 @@
 	.bus-form .forms p 
     font-size: 18px
     line-height: 30px
-			
+	.vegan-wrap
+  	flex-direction: column
+  	text-align: center
+	.vegan-right
+  	max-width: 320px
+	.flip-clock-divider
+		width: 9px	
+	.flip-clock-dot
+		left: 2px
+	.flip-clock-wrapper ul
+		margin: 1px
+	.flip-clock-divider .flip-clock-label
+		right: -47px
+	.sect-7 .vegan-wrap .vegan-left span
+		padding-top: 8px
+	.flip-clock-divider
+	  &.minutes
+	    .flip-clock-label
+	      right: -55px
+	.flip-clock-divider.seconds .flip-clock-label 
+	    right: -56px
+	.flip-clock-wrapper .flip
+		box-shadow: none
+		background: none
+	.clock
+		margin-left: 21%
+	.sect-7 .vegan-wrap
+		margin-top: 0
+
 
 
 
@@ -107,6 +152,10 @@
 	.bus-form .forms .button
 		padding-left: 0
 		padding-right: 0
+	.clock
+		margin-left: 5%
+	.sect-7 .vegan-wrap .vegan-left p
+		font-size: 35px
 
 
 /* Custom, iPhone Retina */
