--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -1,1 +1,3 @@
 @import "../libs/bootstrap-grid/bootstrap-grid.css" // Теперь необходимо казывать расширение .css
+@import "../libs/owl.carousel/dist/assets/owl.carousel.min.css"
+@import "../libs/flipclock/compiled/flipclock.css"
