Section 8 is ready

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -154,8 +154,12 @@
 		padding-right: 0
 	.clock
 		margin-left: 5%
-	.sect-7 .vegan-wrap .vegan-left p
-		font-size: 35px
+	.sect-7 .vegan-wrap .vegan-left
+		padding-bottom: 0
+		p
+			font-size: 35px
+	.sect-8
+ 	 padding-top: 260px
 
 
 /* Custom, iPhone Retina */
