--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -780,5 +780,67 @@ b, strong
 .flip-clock-divider.seconds .flip-clock-label 
     right: -76px
 
+//SECTION 8//
+.sect-8
+  text-align: center
+  min-height: 1060px
+  background: url(../img/bg-8-1.jpg) top center no-repeat, url(../img/bg-8-2.jpg) bottom center no-repeat, url(../img/bg-8-3.jpg) top center repeat-y
+  margin-top: -260px
+  padding-top: 300px
+  .h2
+    h2
+    &:before
+      content: "отзывы"
+      top: -18px
+      left: 84px
+  .item
+    img
+      margin-top: 40px
+      width: 100%
+      height: auto
+      width: 150px
+      height: 150px
+      border-radius: 10em
+      box-shadow: 0 0 0 10px #fff, 0 0 0 12px #eceae5
+  strong
+    display: block
+    font-size: 22px
+    color: #212121
+    padding-top: 40px
+    line-height: 20px
+  span
+    font-size: 16px
+    color: #212121
+    display: block
+  .texy
+    max-width: 680px
+    display: inline-block
+    margin-top: 20px
+    padding-top: 30px
+    background: url(../img/quote.png) no-repeat top center
+    p
+      color: #212121
+      font-size: 18px
+      padding: 0
+      margin: 0
+//SLIDER 2//
+.slider2
+  top: 0
+  width: 100%
+  overflow: hidden
+  position: relative
+  padding-bottom: 60px
+  .slide-wrap
+    float: left
+    .slide2
+      position: relative
+      .img
+        width: 100%
+
+
+//SECTION 9//
+.sect-9
+  background: url(../img/bg-9.jpg) top center no-repeat
+  min-height: 600px
 
 @import "media" // Всегда в конце
