--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -11,9 +11,6 @@
 		line-height: 1.4
 	.sect-2__content::before, .sect-2__content::after
 		display: none
-	.sect-2__content
-		margin-top: -100px
-
 
 
 /* Medium Devices, Desktops */
@@ -63,7 +60,7 @@
 			width: 300px
 		p
 			margin: 0
-	.sect-2__content .h2, .sect-4 .h2, .sect-5 .h2, .sect-6 .h2
+	.sect-2__content .h2, .sect-4 .h2, .sect-5 .h2, .sect-6 .h2, .sect-10 .h2
 		padding: 0
 		font-size: 36px
 		&::before
@@ -138,7 +135,7 @@
 		margin-top: 60px
 	.sect-2__content
 		margin-top: -30px
-	.sect-3 .tex p
+	.sect-3 .tex p, .sect-9 .tex p
 		font-size: 30px
 	.forms
 		.button
@@ -159,7 +156,9 @@
 		p
 			font-size: 35px
 	.sect-8
- 	 padding-top: 260px
+		padding-top: 260px
+	.sect-9
+		padding-top: 50px
 
 
 /* Custom, iPhone Retina */
