Footer is ready

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -11,6 +11,8 @@
 		line-height: 1.4
 	.sect-2__content::before, .sect-2__content::after
 		display: none
+	.footer-copy, .social
+		text-align: center
 
 
 /* Medium Devices, Desktops */
@@ -60,7 +62,7 @@
 			width: 300px
 		p
 			margin: 0
-	.sect-2__content .h2, .sect-4 .h2, .sect-5 .h2, .sect-6 .h2, .sect-10 .h2
+	.sect-2__content .h2, .sect-4 .h2, .sect-5 .h2, .sect-6 .h2, .sect-10 .h2, .foot .h2
 		padding: 0
 		font-size: 36px
 		&::before
@@ -109,6 +111,8 @@
 		margin-left: 21%
 	.sect-7 .vegan-wrap
 		margin-top: 0
+	.social
+		padding-top: 20pxs
 
 
 
@@ -149,6 +153,7 @@
 	.bus-form .forms .button
 		padding-left: 0
 		padding-right: 0
+		line-height: 15px
 	.clock
 		margin-left: 5%
 	.sect-7 .vegan-wrap .vegan-left
