--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -2,3 +2,5 @@
 @import "../libs/owl.carousel/dist/assets/owl.carousel.min.css"
 @import "../libs/flipclock/compiled/flipclock.css"
 @import "../libs/fancybox/dist/jquery.fancybox.min.css"
+@import "../libs/magnific-popup/dist/magnific-popup.css"
+@import "../css/magnificpopup.css"
