--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -445,56 +445,57 @@ b, strong
 			margin-top: 0
 			margin-bottom: 40px
 
+
 //END SECTION SECT-2//
 
 
-//PRELOADER//
-// @mixin opacity($opacity)
-//   opacity: $opacity / 100
-//   filter: alpha(opacity=$opacity)
-// .pulse
-//   position: relative
-//   left: 50%
-//   top: 50vh
-//   margin:
-//     left: -40px
-//     top: -40px
-//   &::before, &::after
-//     content: ''
-//     border: 5px solid #323232
-//     width: 80px
-//     height: 80px
-//     border-radius: 500px
-//     position: absolute
-//   &::before
-//     animation: pulse-outer .8s ease-in infinite
-//   &::after
-//     animation: pulse-inner .8s linear infinite
-// @keyframes pulse-outer
-//   0%
-//     @include opacity(100)
+PRELOADER//
+@mixin opacity($opacity)
+  opacity: $opacity / 100
+  filter: alpha(opacity=$opacity)
+.pulse
+  position: relative
+  left: 50%
+  top: 50vh
+  margin:
+    left: -40px
+    top: -40px
+  &::before, &::after
+    content: ''
+    border: 5px solid #323232
+    width: 80px
+    height: 80px
+    border-radius: 500px
+    position: absolute
+  &::before
+    animation: pulse-outer .8s ease-in infinite
+  &::after
+    animation: pulse-inner .8s linear infinite
+@keyframes pulse-outer
+  0%
+    @include opacity(100)
 
-//   50%
-//     @include opacity(50)
+  50%
+    @include opacity(50)
 
-//   100%
-//     @include opacity(0)
-// @keyframes pulse-inner
-//   0%
-//     @include opacity(0)
-//     transform: scale(0)
+  100%
+    @include opacity(0)
+@keyframes pulse-inner
+  0%
+    @include opacity(0)
+    transform: scale(0)
 
-//   100%
-//     @include opacity(100)
-//     transform: scale(1)
-// .preloader
-//   position: fixed
-//   top: 0
-//   left: 0
-//   bottom: 0
-//   right: 0
-//   z-index: 100
-//   background-color: #22415b
+  100%
+    @include opacity(100)
+    transform: scale(1)
+.preloader
+  position: fixed
+  top: 0
+  left: 0
+  bottom: 0
+  right: 0
+  z-index: 100
+  background-color: #22415b
 
 
 //SECTION SECT-3//
@@ -891,7 +892,6 @@ b, strong
 							font-size: 20px
 							color: #fff
 							height: 50px
-
 .tab-content
 	color: #000
 	.tab_item
@@ -900,5 +900,91 @@ b, strong
 			img
 				width: 100%	
 				height: auto
+
+//FOOTER//
+.foot
+	background: url('../img/foot.jpg') top center no-repeat
+	background-size: cover
+	min-height: 850px
+	margin-top: -65px
+	padding-top: 78px
+	text-align: center
+	.footer-text
+		.h2
+			margin-top: 60px
+			h2
+			&:before
+					content: "Остались вопросы?"
+					top: -18px
+					left: 54px
+		p
+			color: #212121
+			margin: 0
+			padding: 0
+		.button
+			width: 280px
+			margin-top: 30px
+
+.footer-copy
+	text-align: left
+	padding-top: 100px
+	.f-logo
+		padding-right: 65px
+	span
+		color: #212121
+		padding-right: 10px
+		line-height: 60px
+
+.social
+	padding-bottom: 20px
+	text-align: right
+	img
+		transition: all .10s easy
+		&:hover
+			opacity: .5
+
+//MAGNIFIC-POPUP//
+.popup-form
+	position: relative
+	color: #000
+	h3
+		text-align: center
+	label, input
+		display: block
+		width: 100%
+	label
+		margin-bottom: 12px
+		span
+			font-size: 15px
+			color: #999
+	input
+		border: $accent 4px solid
+		padding: 7px 15px
+		color: #212121
+	.button
+		width: 80%
+	input::placeholder, input:required:valid
+		color: #212121
+.text-center
+		text-align: center
+
+.success
+	position: absolute
+	display: none
+	top: 0
+	left: 0
+	width: 100%
+	height: 100%
+	text-align: center
+	background-color: #fff
+	z-index: 2
+	padding: 30px
+	text-transform: uppercase
+	display: none
+	align-items: center
+	font-family: "Arial", sans-serif
+	&.visible
+		display: flex
+
 
 @import "media" // Всегда в конце
