--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -44,7 +44,6 @@ body
 	position: relative
 	line-height: 1.65
 	font-family: "ProximaNova", sans-serif
-	overflow-x: hidden
 	color: #fff
 
 
@@ -132,7 +131,7 @@ b, strong
 	text-transform: none
 	box-shadow: none
 	padding: 0
-	&:hover
+	&:hover, &:focus
 		background: #8dc033
 		color: #ffffff
 	&::after
@@ -449,7 +448,7 @@ b, strong
 //END SECTION SECT-2//
 
 
-PRELOADER//
+//PRELOADER//
 @mixin opacity($opacity)
   opacity: $opacity / 100
   filter: alpha(opacity=$opacity)
@@ -646,6 +645,7 @@ PRELOADER//
 		border: #dbdad9 10px solid
 		padding-bottom: 20px
 		margin-bottom: 20px
+		position: relative
 		.forms
 			width: 100%
 			border-color: transparent
@@ -982,9 +982,57 @@ PRELOADER//
 	text-transform: uppercase
 	display: none
 	align-items: center
-	font-family: "Arial", sans-serif
+	font-family: "Graffiti1C", sans-serif
+	font-size: 30px
 	&.visible
 		display: flex
 
+.success2
+	display: none
+	text-align: center
+	position: absolute
+	padding: 0 40px
+	top: 0
+	left: 0
+	right: 0
+	bottom: 0
+	text-transform: uppercase
+	font-weight: bold
+	z-index: 10
+	span
+		margin: auto
+		background-color: rgba(34,65,91,.8)
+		padding: 40px
+	& ~*
+		transition: all .5s ease
+	&.active
+		& ~*
+			opacity: .5
+			filter: blur(10px)
+
+//MY POPUP
+.white-popup
+	position: relative
+	background: #FFF
+	padding: 20px
+	width: auto
+	max-width: 900px
+	margin: 20px auto
+	color: #212121
+	text-align: center
+	h4
+		color: #212121
+		font-family: "Graffiti1C", sans-serif
+		font-size: 30px
+	img
+		width: 90%
+	p
+		text-align: left
+	strong
+		text-align: left
+		display: block
+	ul
+		text-align: left
+		padding-left: 20px
 
 @import "media" // Всегда в конце
